--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,13 @@
     "module": "esnext",
     "target": "es2017",
     "lib": ["ESNext", "DOM"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
     "strict": true,
-    "strictNullChecks": true
-  }
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true
+  },
+  "exclude": ["node_modules", "dist"]
 }
