--- a/packages/variantwind/package.json
+++ b/packages/variantwind/package.json
@@ -6,7 +6,7 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "browser": "dist/index.esm.js",
+  "browser": "dist/browser.js",
   "typing": "dist/index.d.ts",
   "files": [
     "dist"
